2006-04-11  Frank Lichtenheld  <djpig@debian.org>

	* src/archives.c (quote_filename): Fix typo in
	variable name. If hit, this could lead to a
	infinite loop and OOM in varbufvprintf. (A
	good way to hit it is installing files with
	long non-ASCII filenames in UTF-8 locales).
	Fixed also some typos in the comment for this
	function.

	* scripts/dpkg-scanpackages.pl: Add -follow
	to @find_args. This was lost in a previous patch
	apparently.

2006-04-10  Guillem Jover  <guillem@debian.org>

	* configure.ac: Bump version to 1.13.19~.

2006-04-10  Guillem Jover  <guillem@debian.org>

	* configure.ac: Release 1.13.18.

2006-04-10  Andrew Suffield  <asuffield@debian.org>

	* src/main.h (clearselections): New prototype.
	* src/main.c (usage): Print '--clear-selections' option description.
	(cmdinfos): Add clear-selectons action.
	* src/select.c (clearselections): New function.

2006-04-10  Guillem Jover  <guillem@debian.org>

	* src/main.h (fc_autoselect): Remove.
	* src/main.c (fc_autoselect): Likewise.
	(forceinfos): Mark 'auto-select' as obsolete.
	(setforce): Remove mention of 'auto-select' from the help text.
	Handle obsolete options, and display a warning.

2006-04-09  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-shlibdeps.pl: Support system library directories
	symlinked from '/lib/ldconfig/'.

2006-04-09   Branden Robinson  <branden@debian.org>,
	     Guillem Jover  <guillem@debian.org>

	* src/main.c (execbackend): Pass '--admindir' over to dpkg-query
	when passing '--admindir' or '--root' to dpkg.

2006-04-04  Andrew Suffield  <asuffield@debian.org>

	* dpkg-buildpackage.sh: Use mustsetvar to set sversion variable.

2006-04-04  Jared Spiegel  <jrrs@frontiernet.net>

	* utils/start-stop-daemon.c (do_help): Add '-r' option to the help
	output.

2006-04-04  Guillem Jover  <guillem@debian.org>

	* utils/start-stop-daemon.c (main): Prefix the chroot path, if any,
	when stating the exec file.

2006-03-30  Guillem Jover  <guillem@debian.org>
