@@ -1,3 +1,8 @@
+2006-04-21  Guillem Jover  <guillem@debian.org>
+
+	* src/main.c (printforhelp, setdebug, setforce): Quote each string
+	line instead of escaping its new line at the end.
+
 2006-04-11  Frank Lichtenheld  <djpig@debian.org>
 
 	* src/archives.c (quote_filename): Fix typo in
